--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.6.12",
+    "@chakra-ui/react": "1.6.10",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/m-plus-rounded-1c": "^4.5.0",
